fix typo in paper.bib

--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -95,7 +95,7 @@
             {{ author_last_html -}}
           </em>
         {% comment %} new added {% endcomment %}
-        {%- elif is_target_author -%}
+        {%- elsif is_target_author -%}
           <strong>
             {{- author.first }}
             {{ author_last_html -}}
